=== ongoing ===

=== 0.2 ===

- Added lat lng fields to event.

=== 0.1.2 ===

- Fixed more wrong names :(

=== 0.1.1 ===

- Fixed wrong path to urls.py in cms_app.py
- Fixed wrong import in views.py
- Renamed view names.

=== 0.1 ===

Initial commit